Adjust height and width, fix text alignment

--- a/src/App/Components/Card/Card.scss
+++ b/src/App/Components/Card/Card.scss
@@ -6,8 +6,9 @@
     border-radius: 3rem 0 3rem 0;
     color: $black;
     margin: 1rem;
-    max-height: 30rem;
-    max-width: 20rem;
+    min-height: 35rem;
+    min-width: 25rem;
+    max-width: 25rem;
 
     .card-header {
         align-items: center;
@@ -18,6 +19,7 @@
 
         .card-title {
             flex: 2;
+            text-align: center;
         }
 
         .mark-favorite {
